Ignore cuda, run unit tests

--- a/recipes/galario/meta.yaml
+++ b/recipes/galario/meta.yaml
@@ -24,11 +24,11 @@ source:
 
   # from the master branch
   git_url: {{ github }}.git
+  # git_url: https://github.com/fredRos/galario.git
   git_rev: master
 
   # from a local repo
   # git_url: ../../../galario/.git
-  # git_url: https://github.com/fredRos/galario.git
   # git_rev: conda-build
 
 build:
@@ -62,12 +62,17 @@ requirements:
     - scipy
 
 test:
+  imports:
+    - galario
+  source_files:
+    - python/test_galario.py
+    - python/utils.py
   commands:
     - test -d ${PREFIX}/
     - test ${PREFIX}/include/galario.h
     - test ${PREFIX}/lib/libgalario.so  # [linux]
     - test ${PREFIX}/lib/libgalario.dylib  # [osx]
-    - python -c 'import galario'
+    - cd python && py.test test_galario.py
 
 about:
   home: {{ github }}
