--- a/recipes/galario/meta.yaml
+++ b/recipes/galario/meta.yaml
@@ -47,7 +47,7 @@ requirements:
     # python bindings
     - python
     - cython
-    - numpy
+    - numpy x.x
     - pytest
     - scipy
 
@@ -57,7 +57,7 @@ requirements:
     - libgcc  # [osx]
     # python
     - python
-    - numpy
+    - numpy x.x
     - pytest
     - scipy
 
