[meta.yml] Clean up, numpy x.x -> numpy >=1.11

--- a/recipes/galario/meta.yaml
+++ b/recipes/galario/meta.yaml
@@ -1,12 +1,11 @@
-# Note: there are many handy hints in comments in this example -- remove them when you've finalized your recipe
-
 # Jinja variables help maintain the recipe as you'll update the version only here.
 {% set name = "galario" %}
-{% set version = "1.0" %}
+{% set version = "1.0.1" %}
 {% set github = "https://github.com/mtazzari/galario" %}
-{% set sha256 = "3401cb5d0aa32d168da400c8c33a675a010b0cdd7213ff02a7bb8a8a856d9415" %}
-# sha256 is the prefered checksum -- you can get it for a file with:
-#  `openssl sha256 <file name>`.
+{% set sha256 = "986ea0880f8066cb64251351ad40720b080c2cfe78ab3b5dc347564d0a858979" %}
+# sha256 is the prefered checksum -- you can get it for a file with either of
+#  `openssl sha256 <file name>`
+#  `sha256sum <file name>`
 # You may need the openssl package, available on conda-forge
 #  `conda install openssl -c conda-forge``
 
@@ -14,22 +13,16 @@ package:
   name: {{ name|lower }}
   version: {{ version }}
 
-# source:
-
 source:
   # for a release with tarball
-  # fn: {{ name }}-{{ version }}.tar.gz
-  # url: {{ github }}/archive/v{{ version }}.tar.gz
-  # sha256: {{ sha256 }}
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: {{ github }}/archive/v{{ version }}.tar.gz
+  sha256: {{ sha256 }}
 
-  # from the master branch
-  git_url: {{ github }}.git
+  # from the master branch: only for testing
+  # git_url: {{ github }}.git
   # git_url: https://github.com/fredRos/galario.git
-  git_rev: master
-
-  # from a local repo
-  # git_url: ../../../galario/.git
-  # git_rev: conda-build
+  # git_rev: master
 
 build:
   number: 0
@@ -47,7 +40,7 @@ requirements:
     # python bindings
     - python
     - cython
-    - numpy x.x
+    - numpy 1.11.*
     - pytest
     - scipy
 
@@ -57,7 +50,7 @@ requirements:
     - libgcc  # [osx]
     # python
     - python
-    - numpy x.x
+    - numpy >=1.11
     - pytest
     - scipy
 
@@ -76,15 +69,8 @@ test:
 
 about:
   home: {{ github }}
-  # Remember to specify the license variants for BSD, Apache, GPL, and LGLP.
-  # Prefer the short version, e.g: GPL-2.0 instead of GNU General Public License version 2.0
-  # See https://opensource.org/licenses/alphabetical
   license: LGPL-3.0
-  # The license_family, i.e. "BSD" if license is "BSD-3-Clause". (optional)
   license_family: GPL
-  # It is strongly encouraged to include a license file in the package,
-  # (even if the license doesn't require it) using the license_file entry.
-  # See http://conda.pydata.org/docs/building/meta-yaml.html#license-file
   license_file: LICENSE
   summary: 'Gpu Accelerated Library for Analysing Radio Interferometer Observations'
 
@@ -101,6 +87,6 @@ about:
 
 extra:
   recipe-maintainers:
-    # GitHub IDs for maintainers of the recipe.
+    # GitHub IDs
     - fredRos
     - mtazzari
