Addressed review comment

--- a/recipes/dis3/meta.yaml
+++ b/recipes/dis3/meta.yaml
@@ -12,9 +12,8 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  noarch: python
   number: 0
-  skip: True  # [py>=30]
+  skip: True  # [py3k]
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
@@ -32,10 +31,10 @@ about:
   home: https://pypi.python.org/pypi/dis3
   license: MIT
   license_family: MIT
+  # the LICENCE file is mentioned in the README but not included in the .tar.gz
+  # distributed on PyPi. Since this package is not maintained anymore, we
+  # cannot fix this, unfortunately.
   summary: 'Python 2.7 backport of the "dis" module from Python 3.5+'
-
-  description: |
-      `dis3` is a Python 2.7 backport of the `dis` module from Python 3.5.
 
 extra:
   recipe-maintainers:
