Added license file.

--- a/recipes/resonance/meta.yaml
+++ b/recipes/resonance/meta.yaml
@@ -38,6 +38,7 @@ test:
 about:
   home: http://github.com/moorepants/resonance
   license: CC-BY-4.0
+  license_file: LICENSE
   summary: 'Learning mechanical vibrations through computation.'
 
 extra:
