Added more comments about the home page status

--- a/recipes/dis3/meta.yaml
+++ b/recipes/dis3/meta.yaml
@@ -29,11 +29,13 @@ test:
 
 about:
   home: https://pypi.python.org/pypi/dis3
+  # The home page specified at PyPi (https://github.com/tomxtobin/python-dis3) no longer exists,
+  # however it appears that a new repository with the full git history is accessible at,
+  # https://github.com/xoviat/python-dis3
   license: MIT
   license_family: MIT
   # the LICENCE file is mentioned in the README but not included in the .tar.gz
-  # distributed on PyPi. Since this package is not maintained anymore, we
-  # cannot fix this, unfortunately.
+  # distributed on PyPi.
   summary: 'Python 2.7 backport of the "dis" module from Python 3.5+'
 
 extra:
