another mistake fixed

--- a/recipes/fs.sshfs/meta.yaml
+++ b/recipes/fs.sshfs/meta.yaml
@@ -39,8 +39,8 @@ about:
   license_file: '{{ environ["RECIPE_DIR"] }}/COPYING'
   summary: 'Pyfilesystem2 over SSH using paramiko'
   description: >
-   Once created, the ``SSHFS`` filesystem behaves like any other filesystem
-  (see the `Pyfilesystem2 documentation <https://pyfilesystem2.readthedocs.io>`_).
+    Once created, the SSHFS filesystem behaves like any other filesystem
+    see the Pyfilesystem2 documentation https://pyfilesystem2.readthedocs.io.
 
 extra:
   recipe-maintainers:
