--- a/recipes/doc2dash/meta.yaml
+++ b/recipes/doc2dash/meta.yaml
@@ -23,14 +23,7 @@ requirements:
   build:
     - python
     - setuptools
-    - sphinx ==1.6.2
-    - attrs ==17.2.0
-    - beautifulsoup4 ==4.6.0
-    - click ==6.7
-    - colorama ==0.3.9
-    - lxml ==3.8.0
-    - six ==1.10.0
-    - zope.interface ==4.4.1
+
   run:
     - python
     - sphinx ==1.6.2
@@ -53,7 +46,7 @@ about:
   home: https://pypi.org/project/doc2dash/
   license: MIT
   license_family: MIT
-  license_file: 'LICENSE'
+  license_file: LICENSE
   summary: Convert docs to Dash.app
   description: "doc2dash: Create docsets for Dash.app and clones\n================================================\n\n.. image:: https://readthedocs.org/projects/doc2dash/badge/?version=stable\n   :target:\
     \ https://doc2dash.readthedocs.io/en/stable/?badge=stable\n   :alt: Documentation Status\n\n.. image:: https://travis-ci.org/hynek/doc2dash.svg?branch=master\n   :target: https://travis-ci.org/hynek/doc2dash\n\
