pwkit: address comments from @synapticarbors

--- a/recipes/pwkit/meta.yaml
+++ b/recipes/pwkit/meta.yaml
@@ -25,11 +25,8 @@ build:
 
 requirements:
   build:
-    - numpy
-    - pathlib  # [py2k]
     - python
     - setuptools
-    - six
 
   run:
     - numpy
@@ -40,6 +37,11 @@ requirements:
 test:
   imports:
     - pwkit
+  commands:
+    - astrotool flux2lum 1e-15 10
+    - imtool help
+    - pkenvtool --help
+    - wrapout echo hello
 
 about:
   home: https://github.com/pkgw/pwkit/
