--- a/recipes/gulp/meta.yaml
+++ b/recipes/gulp/meta.yaml
@@ -14,8 +14,9 @@ source:
 build:
   number: 0
   noarch: True
-  script: npm install -g gulp
-
+  script: 
+    - npm install -g gulp
+    - npm link gulp
 requirements:
   build:
     - nodejs
