--- a/recipes/flasgger/meta.yaml
+++ b/recipes/flasgger/meta.yaml
@@ -19,14 +19,19 @@ requirements:
   build:
     - python
     - setuptools
+    - jsonschema
     - PyYAML
+    - flask
+    - mistune
+    - six
   run:
     - python
-    - flask
-    - PyYAML
     - jsonschema
-    - six
+    - PyYAML
+    - flask
     - mistune
+    - six
+
 
 test:
   imports:
