--- a/recipes/flasgger/meta.yaml
+++ b/recipes/flasgger/meta.yaml
@@ -20,14 +20,14 @@ requirements:
     - python
     - setuptools
     - jsonschema
-    - PyYAML
+    - pyyaml
     - flask
     - mistune
     - six
   run:
     - python
     - jsonschema
-    - PyYAML
+    - pyyaml
     - flask
     - mistune
     - six
