Fix test commands

--- a/recipes/flasgger/meta.yaml
+++ b/recipes/flasgger/meta.yaml
@@ -32,7 +32,7 @@ test:
   imports:
     - flasgger
   commands:
-    - python flasgger.examples
+    - python examples.apispec_example.py
 
 about:
   home: https://github.com/rochacbruno/flasgger
