tectonic: pkg-config needed to build

--- a/recipes/tectonic/meta.yaml
+++ b/recipes/tectonic/meta.yaml
@@ -18,6 +18,7 @@ build:
 requirements:
   build:
     - rust
+    - pkg-config
     - fontconfig 2.12.*  # [not osx]
     - freetype 2.7
     - graphite2 1.3.*
