contact_map => 0.1.2 (includes LICENSE)

--- a/recipes/contact_map/meta.yaml
+++ b/recipes/contact_map/meta.yaml
@@ -1,9 +1,6 @@
 {% set name = "contact_map" %}
-{% set version = "0.1.1" %}
-{% set sha256 = "695967007dc43b639efd458130411463ce79893863699d2d32b60c1b848cd062" %}
-# sha256 comes from 
-# openssl sha256 dist/contact_map-{{ version }}.tar.gz
-# (after `python setup.py sdist`)
+{% set version = "0.1.2" %}
+{% set sha256 = "eb80fc61421af00bc0e197832533d44a67e881e8b78ab35cd98fe9e9a84e5212" %}
 
 package:
   name: {{ name|lower }}
@@ -23,10 +20,6 @@ requirements:
   build:
     - python
     - setuptools
-    - future
-    - numpy
-    - mdtraj
-    - pandas
   run:
     - python
     - future
@@ -42,13 +35,8 @@ about:
   home: http://github.com/dwhswenson/contact_map
   license: LGPL-2.1+
   license_family: LGPL
-  # It is strongly encouraged to include a license file in the package,
-  # (even if the license doesn't require it) using the license_file entry.
-  # See http://conda.pydata.org/docs/building/meta-yaml.html#license-file
-  license_file: LICENSE.txt
+  license_file: LICENSE
   summary: 'Contact maps based on MDTraj'
-
-  # The remaining entries in this section are optional, but recommended
   description: |
       Contact maps based on MDTraj; useful for studying for intramolecular
       and intermolecular contacts from simulations of biomolecular systems.
