fixed recipe maintainers

--- a/recipes/fs-s3fs/meta.yaml
+++ b/recipes/fs-s3fs/meta.yaml
@@ -37,11 +37,11 @@ about:
   home: http://fs-s3fs.readthedocs.io/en/stable
   license: MIT
   license_family: MIT
-  license_file: ''
   summary: Amazon S3 filesystem for PyFilesystem2
   description: "Amazon S3 filesystem implementation for PyFilesystem2"
   doc_url: 'http://fs-s3fs.readthedocs.io/en/stable/'
   dev_url: 'https://github.com/PyFilesystem/s3fs'
 
 extra:
-  recipe-maintainers: 'notestaff'
+  recipe-maintainers: 
+    - 'notestaff'
