added enum34 dependency for py2k; removed noarch python since we use selectors now

--- a/recipes/fs-s3fs/meta.yaml
+++ b/recipes/fs-s3fs/meta.yaml
@@ -15,7 +15,6 @@ source:
 build:
   number: 0
   script: python setup.py install  --single-version-externally-managed --record=record.txt
-  noarch: python
 
 requirements:
   build:
@@ -24,11 +23,13 @@ requirements:
     - boto3 >=1.4.0,<2
     - fs >=2.0.7,<3
     - six >=1.10.0,<2
+    - enum34  # [py2k]
   run:
     - python
     - boto3 >=1.4.0,<2
     - fs >=2.0.7,<3
     - six >=1.10.0,<2
+    - enum34  # [py2k]
 
 test:
   requires:
