--- a/recipes/fs-s3fs/meta.yaml
+++ b/recipes/fs-s3fs/meta.yaml
@@ -20,10 +20,6 @@ requirements:
   build:
     - python
     - setuptools
-    - boto3 >=1.4.0,<2
-    - fs >=2.0.7,<3
-    - six >=1.10.0,<2
-    - enum34  # [py2k]
   run:
     - python
     - boto3 >=1.4.0,<2
@@ -49,3 +45,4 @@ about:
 extra:
   recipe-maintainers: 
     - 'notestaff'
+    - 'willmcgugan'
