added setuptools run requirement

--- a/recipes/fs-s3fs/meta.yaml
+++ b/recipes/fs-s3fs/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - setuptools
   run:
     - python
+    - setuptools
     - boto3 >=1.4.0,<2
     - fs >=2.0.7,<3
     - six >=1.10.0,<2
