--- a/recipes/sigopt/meta.yaml
+++ b/recipes/sigopt/meta.yaml
@@ -21,8 +21,16 @@ requirements:
     - python
     - setuptools
     - requests
+  test:
+    - pytest
   run:
     - python
+
+test:
+  commands:
+    - python -m pytest -rw -v test
+  imports:
+    - sigopt
 
 about:
   home: http://github.com/sigopt/sigopt-python
