--- a/recipes/sigopt/meta.yaml
+++ b/recipes/sigopt/meta.yaml
@@ -1,6 +1,7 @@
 {% set name = "sigopt" %}
 {% set version = "2.12.0" %}
-{% set sha256 = "1af6bb80a66078d4e91cf9138689c85c85b23448a68eeaccf4550cb88fc5d514" %}
+{% set hash_type = "sha256" %}
+{% set hash_value = "1af6bb80a66078d4e91cf9138689c85c85b23448a68eeaccf4550cb88fc5d514" %}
 
 package:
   name: {{ name|lower }}
@@ -9,7 +10,7 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  '{{ hash_type }}': '{{ hash_value }}'
 
 build:
   noarch: python
@@ -21,12 +22,12 @@ requirements:
     - python
     - setuptools
     - requests
-  test:
-    - pytest
   run:
     - python
 
 test:
+  requires:
+    - pytest
   commands:
     - python -m pytest -rw -v test
   imports:
