Update calls to Travis CI trigger scripts
Make use of the now one script used trigger Travis CI builds.

[ci skip]
[skip ci]

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,5 +42,5 @@ after_failure:
         [ "${TRAVIS_PULL_REQUEST}" == "false" ] &&
         [ "${TRAVIS_BRANCH}" == "master" ]
     ) && \
-    ( git remote remove upstream_with_token || echo .CI/trigger_staged-recipes.py )
+    ( git remote remove upstream_with_token || python .CI/trigger_travis_build.py "conda-forge/staged-recipes" )
 
