--- a/recipes/libobjcryst/meta.yaml
+++ b/recipes/libobjcryst/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "libobjcryst" %}
 {% set version = "2017.1.1" %}
-{% set md5 = "08d33a1fb654a6fec9c16ddccbbc8c72" %}
+{% set sha256 = "513db8853fe306d6620969fd8e82cff179c62baf5d44957b0eca8983528d4f5a" %}
 
 package:
   name: {{ name|lower }}
@@ -9,7 +9,7 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://github.com/diffpy/{{ name }}/releases/download/v{{ version }}/{{ name }}-{{ version }}.tar.gz
-  md5: {{ md5 }}
+  sha256: {{ sha256 }}
 
 build:
   number: 0
@@ -17,12 +17,13 @@ build:
 
 requirements:
   build:
+    - toolchain
     - scons
     - boost 1.61.0
 
 test:
   commands:
-    - true
+    - test -f $PREFIX/lib/libObjCryst${SHLIB_EXT}
 
 about:
   home: https://github.com/diffpy/libobjcryst/
@@ -31,7 +32,6 @@ about:
   license_file: LICENSE.txt
   summary: 'ObjCryst++ packaged for installation as a shared library.'
 
-  # The remaining entries in this section are optional, but recommended
   description: |
     ObjCryst++ is Object-Oriented Crystallographic Library for C++ developed
     by Vincent Favre-Nicolin. libobjcryst is a mirror of the ObjCryst++
