[skip appveyor] [skip travis]

--- a/recipes/python-pdfkit/meta.yaml
+++ b/recipes/python-pdfkit/meta.yaml
@@ -16,6 +16,8 @@ build:
   number: 0
   noarch: python
   script: python setup.py install --single-version-externally-managed --record record.txt
+  # wkhtmltopdf is not yet available on Windows or Mac
+  skip: True  # [win or osx]
 
 requirements:
   build:
