--- a/recipes/sigopt/meta.yaml
+++ b/recipes/sigopt/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "sigopt" %}
-{% set version = "2.12.0" %}
+{% set version = "2.13.2" %}
 {% set hash_type = "sha256" %}
-{% set hash_value = "1af6bb80a66078d4e91cf9138689c85c85b23448a68eeaccf4550cb88fc5d514" %}
+{% set hash_value = "fe5d21c6586415618ae308ac6e1d8b0f7e68c3fb3b60782588d4e7eb900c736c" %}
 
 package:
   name: {{ name|lower }}
@@ -27,11 +27,10 @@ requirements:
 
 test:
   requires:
-    - pytest
-  commands:
-    - python -m pytest -rw -v test
+    - requests
   imports:
     - sigopt
+    - sigopt.vendored
 
 about:
   home: http://github.com/sigopt/sigopt-python
