WIP: try master branch (which is python3 friendly)

--- a/recipes/libobjcryst/meta.yaml
+++ b/recipes/libobjcryst/meta.yaml
@@ -1,14 +1,16 @@
 {% set name = "libobjcryst" %}
 {% set version = "2017.1.1" %}
-{% set sha256 = "605710be928274a0a73efeda0bf76a8a32c8f5fcedce27b25fd96a6cc67fcf26" %}
+{% set sha256 = "3906f134dd5923d6427a0801a4d2ff26ac65520bc0a24752ba9977147b190749" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/diffpy/{{ name }}/releases/download/v{{ version }}/{{ name }}-{{ version }}.tar.gz
+#  fn: {{ name }}-{{ version }}.tar.gz
+  fn: master.zip
+#  url: https://github.com/diffpy/{{ name }}/releases/download/v{{ version }}/{{ name }}-{{ version }}.tar.gz
+  url: https://github.com/diffpy/libobjcryst/archive/master.zip
   sha256: {{ sha256 }}
 
 build:
