--- a/recipes/popt/meta.yaml
+++ b/recipes/popt/meta.yaml
@@ -1,20 +1,24 @@
+{% set name = "popt" %}
+{% set version = "1.16" %}
+{% set sha256 = "e728ed296fe9f069a0e005003c3d6b2dde3d9cad453422a10d6558616d304cc8" %}
+
 package:
-  name: popt
-  version: 1.16
+  name: {{ name|lower }}
+  version: {{ version }}
+
+source:
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: ftp://anduin.linuxfromscratch.org/BLFS/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: {{ sha256 }}
 
 build:
   number: 0
-
-source:
-  fn: popt-1.16.tar.gz
-  url: ftp://anduin.linuxfromscratch.org/BLFS/popt/popt-1.16.tar.gz
-  md5: 3743beefa3dd6247a73f8f7a32c14c33
 
 test:
   commands:
     - test -f $PREFIX/include/popt.h
     - test -f $PREFIX/lib/libpopt.a
-    - test -f $PREFIX/lib/libpopt.so     # [linux]
+    - test -f $PREFIX/lib/libpopt.so  # [linux]
     - test -f $PREFIX/lib/libpopt.dylib  # [osx]
 
 about:
@@ -22,3 +26,7 @@ about:
   license: MIT
   license_file: COPYING
   summary: 'Popt is a C library for parsing command line parameters.'
+
+extra:
+  recipe-maintainers:
+    - notestaff
