--- a/recipes/rsync/meta.yaml
+++ b/recipes/rsync/meta.yaml
@@ -13,17 +13,20 @@ source:
 
 build:
   number: 0
-  script: ./configure --prefix=$PREFIX --without-included-zlib && make install
+  script: './configure --prefix=$PREFIX --without-included-zlib && make install'
 
 requirements:
   build:
     - toolchain
     - zlib
     - popt
+    - perl
+    - libiconv
   run:
     - libgcc  # [linux]
     - zlib
     - popt
+    - libiconv
 
 test:
   commands:
