fixed libiconv; added toolchain dep

--- a/recipes/popt/meta.yaml
+++ b/recipes/popt/meta.yaml
@@ -14,6 +14,13 @@ source:
 build:
   number: 0
 
+requirements:
+  build:
+    - toolchain
+    - libiconv
+  run:
+    - libgcc  # [linux]    
+
 test:
   commands:
     - test -f $PREFIX/include/popt.h
