fixed test on windows

--- a/recipes/popt/meta.yaml
+++ b/recipes/popt/meta.yaml
@@ -24,9 +24,11 @@ requirements:
 test:
   commands:
     - test -f $PREFIX/include/popt.h
-    - test -f $PREFIX/lib/libpopt.a
+    - test -f $PREFIX/lib/libpopt.a  # [unix]
     - test -f $PREFIX/lib/libpopt.so  # [linux]
     - test -f $PREFIX/lib/libpopt.dylib  # [osx]
+    - conda inspect linkages -p $PREFIX libiconv  # [not win]
+    - conda inspect objects -p $PREFIX libiconv  # [osx]
 
 about:
   home: http://rpm5.org/
