--- a/recipes/rsync/meta.yaml
+++ b/recipes/rsync/meta.yaml
@@ -13,6 +13,7 @@ source:
 
 build:
   number: 0
+  skip: True  # [win]
   script: './configure --prefix=$PREFIX --without-included-zlib && make install'
 
 requirements:
