--- a/recipes/c3/meta.yaml
+++ b/recipes/c3/meta.yaml
@@ -7,7 +7,7 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/d3/d3/archive/v4.10.2.tar.gz
+  url: https://github.com/c3js/c3/archive/v0.4.18.tar.gz
   sha256: {{ sha256 }}
 
 build:
@@ -26,7 +26,7 @@ test:
    
 
 about:
-  home: https://github.com/d3/d3
+  home: https://github.com/c3js/c3
   license: MIT
   license_family: MIT
   license_file: LICENSE
