added pins, removed runtime libgcc dependency

--- a/recipes/rsync/meta.yaml
+++ b/recipes/rsync/meta.yaml
@@ -19,13 +19,12 @@ build:
 requirements:
   build:
     - toolchain
-    - zlib
+    - perl 5.22.2.1
+    - zlib 1.2.8
     - popt
-    - perl
     - libiconv
   run:
-    - libgcc  # [linux]
-    - zlib
+    - zlib 1.2.8
     - popt
     - libiconv
 
