--- a/recipes/popt/meta.yaml
+++ b/recipes/popt/meta.yaml
@@ -10,6 +10,8 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: ftp://anduin.linuxfromscratch.org/BLFS/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    - 0001-remove-tests-58-and-59.patch  # [osx]
 
 build:
   number: 0
@@ -25,10 +27,10 @@ requirements:
 test:
   commands:
     - test -f $PREFIX/include/popt.h
-    - test -f $PREFIX/lib/libpopt.a  # [unix]
+    - test -f $PREFIX/lib/libpopt.a
     - test -f $PREFIX/lib/libpopt.so  # [linux]
     - test -f $PREFIX/lib/libpopt.dylib  # [osx]
-    - conda inspect linkages -p $PREFIX libiconv  # [not win]
+    - conda inspect linkages -p $PREFIX libiconv
     - conda inspect objects -p $PREFIX libiconv  # [osx]
 
 about:
