--- a/recipes/rsync/meta.yaml
+++ b/recipes/rsync/meta.yaml
@@ -10,6 +10,8 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://www.samba.org/ftp/{{ name }}/src/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    - 0001-removed-devices-test.patch
 
 build:
   number: 0
