--- a/recipes/popt/meta.yaml
+++ b/recipes/popt/meta.yaml
@@ -12,6 +12,7 @@ source:
   sha256: {{ sha256 }}
   patches:
     - 0001-remove-tests-58-and-59.patch  # [osx]
+    - 0002-added-sanity-autotest.patch
 
 build:
   number: 0
@@ -21,6 +22,7 @@ requirements:
   build:
     - toolchain
     - libiconv
+    - perl 5.22.2.1
   run:
     - libiconv
 
