Add package versions and mantainers

--- a/recipes/flasgger/meta.yaml
+++ b/recipes/flasgger/meta.yaml
@@ -12,6 +12,7 @@ source:
   md5: {{ md5 }}
 
 build:
+  noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
@@ -20,12 +21,12 @@ requirements:
     - python
     - setuptools
   run:
-    - python
-    - jsonschema
-    - pyyaml
-    - flask
+    - flask >=0.10
+    - jsonschema >=2.5.1
     - mistune
-    - six
+    - python
+    - pyyaml >=3.0
+    - six >=1.10.0
 
 
 test:
@@ -42,3 +43,5 @@ about:
 extra:
   recipe-maintainers:
     - lvoliveira
+    - nicoddemus
+    - igortg
