--- a/recipes/vaex-core/meta.yaml
+++ b/recipes/vaex-core/meta.yaml
@@ -21,7 +21,7 @@ requirements:
   build:
     - python
     - setuptools
-    - numpy >=1.11
+    - numpy 1.11.*
     - toolchain
   run:
     - python
