--- a/recipes/pyobjcryst/meta.yaml
+++ b/recipes/pyobjcryst/meta.yaml
@@ -19,6 +19,7 @@ requirements:
   build:
     - python
     - setuptools
+    - toolchain
     - numpy 1.11.2
     - libobjcryst >=2017.1.1,2017.1.*
     - boost 1.61.0
