--- a/recipes/intervaltree/meta.yaml
+++ b/recipes/intervaltree/meta.yaml
@@ -1,4 +1,4 @@
-{% version = "2.1.0" %}
+{% set version = "2.1.0" %}
 
 package:
   name: intervaltree
@@ -25,7 +25,6 @@ requirements:
 test:
   imports:
     - intervaltree
-
   requires:
     - pytest
 
