--- a/recipes/parcel/meta.yaml
+++ b/recipes/parcel/meta.yaml
@@ -15,7 +15,8 @@ source:
 
 build:
   number: 0
-  skip: true  # [py3k]
+  # does not support python 3 and windows
+  skip: true  # [py3k or win]
   script: make && python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
