--- a/recipes/dask-glm/meta.yaml
+++ b/recipes/dask-glm/meta.yaml
@@ -23,9 +23,10 @@ requirements:
     - setuptools_scm
   run:
     - dask
-    - scikit-learn
-    - scipy
-    - multipledispatch
+    - setuptools
+    - scikit-learn>=0.18
+    - scipy>=0.18.1
+    - multipledispatch>=0.4.9
 
 test:
   imports:
