--- a/recipes/fs_filepicker/meta.yaml
+++ b/recipes/fs_filepicker/meta.yaml
@@ -34,7 +34,7 @@ about:
   home: https://github.com/ReimarBauer/fs_filepicker
   license: APACHE 2.0
   license_file: LICENSE
-  summary: 'QT file pickler for accessing a pyfilesystem2'
+  summary: 'QT file picker for accessing a pyfilesystem2'
   dev_url: https://github.com/ReimarBauer/fs_filepicker
 
 extra:
