--- a/recipes/hide_code/meta.yaml
+++ b/recipes/hide_code/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "hide_code" %}
-{% set version = "0.4.0" %}
-{% set sha256 = "2916d864ba1e21f6e3c92a3fffcca0e51f4f01a759a8d202d6b0e02a7cddec9e" %}
+{% set version = "0.5.0" %}
+{% set sha256 = "009fdd3f3f150db18037534f549d2a926ab43832260955c5447b28e7414fbf53" %}
 
 package:
     name: {{ name }}
@@ -12,21 +12,24 @@ source:
     sha256: {{ sha256 }}
 
 build:
-    noarch: python
     number: 0
+    noarch: python
+    skip: True  # [win or osx]
     script: |
         set -ex
         python setup.py install --single-version-externally-managed --record record.txt
-        jupyter nbextension install --py hide_code
+        jupyter nbextension install --py hide_code --sys-prefix
 
 requirements:
     build:
         - python
         - setuptools
         - notebook >=4.4.1
+        - python-pdfkit
     run:
         - python
         - notebook >=4.4.1
+        - python-pdfkit
 
 test:
     imports:
@@ -35,7 +38,7 @@ test:
 about:
     home: https://github.com/kirbs-/hide_code
     license: MIT
-    license_file: LICENSE
+    license_file: hide_code/LICENSE.txt
     summary: 'Code, prompt and output hiding for Jupyter/IPython notebooks.'
 
 extra:
