--- a/recipes/nearpy/meta.yaml
+++ b/recipes/nearpy/meta.yaml
@@ -10,13 +10,9 @@ package:
 source:
   # No sdist available
   # xref: https://github.com/pixelogik/NearPy/issues/67
-  # fn: '{{ name }}-{{ version }}.tar.gz'
-  # url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  # '{{ hash_type }}': '{{ hash_value }}'
-  # ref: https://github.com/pixelogik/NearPy/issues/67
-  git_url: https://github.com/pixelogik/NearPy
-  git_revision: 1.0.0
-
+  url: https://github.com/pixelogik/{{ name }}/archive/{{ version }}.tar.gz
+  '{{ hash_type }}': '{{ hash_value }}'
+  
 build:
   noarch: python
   number: 0
