--- a/recipes/nearpy/meta.yaml
+++ b/recipes/nearpy/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "NearPy" %}
 {% set version = "1.0.0" %}
 {% set hash_type = "sha256" %}
-{% set hash_value = "???" %}
+{% set hash_value = "320148ac61bc29b342efa235c8cccbdebf2f35d456e29d9b30bb7baec57b0b0c" %}
 
 package:
   name: '{{ name|lower }}'
@@ -12,7 +12,7 @@ source:
   # xref: https://github.com/pixelogik/NearPy/issues/67
   url: https://github.com/pixelogik/{{ name }}/archive/{{ version }}.tar.gz
   '{{ hash_type }}': '{{ hash_value }}'
-  
+
 build:
   noarch: python
   number: 0
