--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 # The language in this case has no bearing - we are going to be making use of conda.
 language: generic
 
-os: osx
-osx_image: xcode6.4
+jobs:
+  include:
+    - if: (fork IN (true)) OR (type IN (pull_request))
+      os: osx
+      osx_image: xcode6.4
+
+    - if: (fork IN (false)) AND (NOT (type IN (pull_request)))
+      os: linux
+      sudo: false
 
 sudo: false
 
