- Added patch for osx to prevent trying to install into /Library - Added pins

--- a/recipes/cyrus-sasl/meta.yaml
+++ b/recipes/cyrus-sasl/meta.yaml
@@ -11,6 +11,8 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: ftp://ftp.cyrusimap.org/cyrus-sasl/{{ name }}-{{ version }}.tar.gz
   {{ hashtype }}: {{ hash }}
+  patches:
+    - makefile.patch  # [osx]
 
 build:
   number: 0
@@ -23,13 +25,13 @@ build:
 requirements:
   build:
     - toolchain
-    - krb5
-    - openssl
+    - krb5 1.14.*
+    - openssl 1.0.*
     - libntlm
 
   run:
-    - krb5
-    - openssl
+    - krb5 1.14.*
+    - openssl 1.0.*
     - libntlm
 
 test:
