More makefile patching

--- a/recipes/cyrus-sasl/meta.yaml
+++ b/recipes/cyrus-sasl/meta.yaml
@@ -13,6 +13,8 @@ source:
   {{ hashtype }}: {{ hash }}
   patches:
     - makefile.patch  # [osx]
+    - include_makefile.patch  # [osx]
+    - lib_makefile.patch  # [osx]
 
 build:
   number: 0
