--- a/recipes/cyrus-sasl/meta.yaml
+++ b/recipes/cyrus-sasl/meta.yaml
@@ -19,7 +19,8 @@ source:
 build:
   number: 0
   script:
-    - ./configure --prefix=$PREFIX
+    - ./configure --prefix=$PREFIX  # [linux]
+    - ./configure --prefix=$PREFIX --disable-macos-framework  # [osx]
     - make
     - make install
   skip: True  # [win]
