skip windows [skip appveyor]

--- a/recipes/valgrind/meta.yaml
+++ b/recipes/valgrind/meta.yaml
@@ -5,6 +5,7 @@
 package:
   name: {{ name|lower }}
   version: {{ version }}
+  skip: True  # [win]
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
