added dependencies [skip appveyor]

--- a/recipes/valgrind/meta.yaml
+++ b/recipes/valgrind/meta.yaml
@@ -19,6 +19,10 @@ build:
 requirements:
   build:
     - toolchain
+    - gcc
+    - binutils
+    - pkg-config
+    - perl 5.22*
 
 test:
   commands:
