added build.sh [skip appveyor]

--- a/recipes/valgrind/meta.yaml
+++ b/recipes/valgrind/meta.yaml
@@ -14,15 +14,15 @@ source:
 
 build:
   number: 0
-  script: ./configure --prefix=$PREFIX && make && make install && make regtest
 
 requirements:
   build:
     - toolchain
     - gcc
-    - binutils
+    - binutils  # [linux]
     - pkg-config
     - perl 5.22*
+    - boost
 
 test:
   commands:
