--- a/.travis.yml
+++ b/.travis.yml
@@ -44,10 +44,10 @@ script:
 after_failure:
   # Trigger a build only if this is not a pull request and is on the `master` branch.
   # Also ensure that no recipes were converted (otherwise we already triggered a build by pushing).
-  - (
-        [ "${TRAVIS_REPO_SLUG}" == "conda-forge/staged-recipes" ] &&
-        [ "${TRAVIS_PULL_REQUEST}" == "false" ] &&
-        [ "${TRAVIS_BRANCH}" == "master" ]
-    ) && \
-    ( git remote remove upstream_with_token || python .CI/trigger_travis_build.py "conda-forge/staged-recipes" )
+  - if   [ "${TRAVIS_REPO_SLUG}" == "conda-forge/staged-recipes" ] &&
+         [ "${TRAVIS_PULL_REQUEST}" == "false" ] &&
+         [ "${TRAVIS_BRANCH}" == "master" ];
+    then
+        python .CI/trigger_travis_build.py "conda-forge/staged-recipes";
+    fi
 
