--- a/recipes/httptools/meta.yaml
+++ b/recipes/httptools/meta.yaml
@@ -34,7 +34,7 @@ test:
 
 about:
   home: https://github.com/MagicStack/httptools
-  summary: 'Fast HTTP parser'
+  summary: "Fast HTTP parser"
   license: MIT
   license_file: LICENSE
 
