--- a/recipes/sanic/meta.yaml
+++ b/recipes/sanic/meta.yaml
@@ -34,7 +34,7 @@ test:
 
 about:
   home: https://github.com/channelcat/sanic
-  summary: 'Async Python 3.5+ web server that\'s written to go fast'
+  summary: "Async Python 3.5+ web server that's written to go fast"
   license: MIT
   license_file: LICENSE
 
