--- a/recipes/sanic/meta.yaml
+++ b/recipes/sanic/meta.yaml
@@ -27,6 +27,7 @@ requirements:
     - ujson >=1.35
     - uvloop >=0.5.3
     - websockets >=3.2
+    - aiofiles >=0.3.0
 
 test:
   imports:
@@ -36,7 +37,6 @@ about:
   home: https://github.com/channelcat/sanic
   summary: "Async Python 3.5+ web server that's written to go fast"
   license: MIT
-  license_file: LICENSE
 
 extra:
   recipe-maintainers:
