removed futures for py36, removed double newline

--- a/recipes/vaex-core/meta.yaml
+++ b/recipes/vaex-core/meta.yaml
@@ -29,7 +29,7 @@ requirements:
     - scipy
     - astropy >=1
     - aplus
-    - futures >=2.2.0  # [py27 or py35]
+    - futures >=2.2.0  # [py27]
     - future >=0.15.2
     - pyyaml
     - progressbar2
@@ -51,7 +51,6 @@ about:
   summary: 'Core of vaex'
   doc_url: http://vaex.astro.rug.nl/latest
   dev_url: https://www.github.com/maartenbreddels/vaex
-
 
 extra:
   recipe-maintainers:
