--- a/recipes/sigopt/meta.yaml
+++ b/recipes/sigopt/meta.yaml
@@ -21,13 +21,11 @@ requirements:
   build:
     - python
     - setuptools
-    - requests
   run:
     - python
+    - requests>=2.11.1
 
 test:
-  requires:
-    - requests
   imports:
     - sigopt
     - sigopt.vendored
