Add pywinrm license

--- a/recipes/pywinrm/meta.yaml
+++ b/recipes/pywinrm/meta.yaml
@@ -35,6 +35,8 @@ about:
   home: https://github.com/diyan/pywinrm
   license: MIT
   license_family: MIT
+  # Issue concerning upstream packaging of license file: https://github.com/diyan/pywinrm/issues/183
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'Python library for Windows Remote Management (WinRM)'
 
   description: |
