fixed doc url, added pins, added runtime deps [skip appveyor]

--- a/recipes/valgrind/meta.yaml
+++ b/recipes/valgrind/meta.yaml
@@ -20,7 +20,13 @@ requirements:
     - toolchain
     - pkg-config
     - perl 5.22*
-    - boost
+    - boost 1.65.1
+    - zlib 1.2.8
+    - openmp
+  run:
+    - boost 1.65.1
+    - zlib 1.2.8
+    - openmp
 
 test:
   commands:
@@ -37,12 +43,12 @@ about:
   description: |
     Valgrind is an instrumentation framework for building dynamic analysis tools. There are Valgrind tools that can
     automatically detect many memory management and threading bugs, and profile your programs in detail. You can also use
-    Valgrind to build new tools.  The Vaflgrind distribution currently includes six production-quality tools: a memory
+    Valgrind to build new tools.  The Valgrind distribution currently includes six production-quality tools: a memory
     error detector, two thread error detectors, a cache and branch-prediction profiler, a call-graph generating cache and
     branch-prediction profiler, and a heap profiler. It also includes three experimental tools: a stack/global array
     overrun detector, a second heap profiler that examines how heap blocks are used, and a SimPoint basic block vector
     generator.
-  doc_url: http://simplejson.readthedocs.io/
+  doc_url: http://valgrind.org/docs/manual/manual.html
   dev_url: http://valgrind.org/downloads/repository.html
 
 extra:
