--- a/recipes/django-libsass/meta.yaml
+++ b/recipes/django-libsass/meta.yaml
@@ -12,8 +12,8 @@ source:
 
 build:
   number: 0
-  noarch: python
   script: python setup.py install --single-version-externally-managed --record record.txt
+  skip: true  # [win and py27]
 
 requirements:
   build:
