--- a/recipes/sanic/meta.yaml
+++ b/recipes/sanic/meta.yaml
@@ -14,7 +14,7 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
-  skip: True  # [py<35 or win]
+  skip: True  # [py<35]
 
 requirements:
   build:
