--- a/recipes/pulp/meta.yaml
+++ b/recipes/pulp/meta.yaml
@@ -7,7 +7,7 @@ package:
 source:
   sha256: cfecd6a78c2b08539dc29b7e8281f43d729b1089bdb5e491c3c0956aadbb3fc7
   fn: 'PuLP-{{ version }}.tar.gz'
-  url: https://pypi.python.org/packages/source/P/PuLP/PuLP-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/P/PuLP/PuLP-{{ version }}.tar.gz
 
 build:
   entry_points:
