--- a/recipes/pulp/meta.yaml
+++ b/recipes/pulp/meta.yaml
@@ -14,6 +14,7 @@ build:
     - pulptest=pulp:pulpTestAll
     - pulpdoctest=pulp:pulpDoctest
   number: 0
+  script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
   build:
