updated license file

--- a/recipes/pyld/meta.yaml
+++ b/recipes/pyld/meta.yaml
@@ -34,8 +34,8 @@ about:
   license: BSD
   summary: 'Python implementation of the JSON-LD API'
   license_family: BSD
-  license_file: COPYING
-  dev_url: http://github.com/digitalbazaar/pyld
+  license_file: LICENSE
+  dev_url: https://github.com/digitalbazaar/pyld
 
 extra:
   recipe-maintainers:
