--- a/recipes/tar/meta.yaml
+++ b/recipes/tar/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  script: ./configure --prefix=$PREFIX && make && make check && make install
+  script: FORCE_UNSAFE_CONFIGURE=1 ./configure --prefix=$PREFIX && make && make check && make install
   skip: True  # [win]
 
 requirements:
