fixed import tests

--- a/recipes/fs.webdavfs/meta.yaml
+++ b/recipes/fs.webdavfs/meta.yaml
@@ -27,7 +27,8 @@ requirements:
 
 test:
   imports:
-    - webdavfs.webdavfs.WebDAVFS
+    - webdavfs.webdavfs
+    - webdavfs.opener
 
 about:
   home: https://github.com/PyFilesystem/webdavfs
