Move pytest from run to test requirements

--- a/recipes/galario/meta.yaml
+++ b/recipes/galario/meta.yaml
@@ -26,16 +26,16 @@ requirements:
     - numpy 1.11.*
     - pytest
     - scipy
-
   run:
     - fftw
     - libgcc  # [osx]
     - python
     - numpy >=1.11
-    - pytest
     - scipy
 
 test:
+  requires:
+    - pytest
   imports:
     - galario
   source_files:
