[statmorph] Add numpy and scipy requirements.

--- a/recipes/statmorph/meta.yaml
+++ b/recipes/statmorph/meta.yaml
@@ -21,6 +21,8 @@ requirements:
   build:
     - python
     - setuptools
+    - numpy
+    - scipy
     - scikit-image
     - astropy
     - photutils
