[statmorph] Add run requirements.

--- a/recipes/statmorph/meta.yaml
+++ b/recipes/statmorph/meta.yaml
@@ -19,15 +19,13 @@ build:
 
 requirements:
   build:
-    - python
-    - setuptools
-    - numpy
-    - scipy
-    - scikit-image
-    - astropy
-    - photutils
+    - scikit-image >=0.13
+    - astropy >=2.0
+    - photutils >=0.3
   run:
-    - python
+    - scikit-image >=0.13
+    - astropy >=2.0
+    - photutils >=0.3
 
 test:
   imports:
