Add basic test sections

--- a/recipes/tvb-data/meta.yaml
+++ b/recipes/tvb-data/meta.yaml
@@ -7,6 +7,11 @@ source:
   git_rev: 805f9af4eb05722a52db789307bb81e261ba529a
   git_url: https://github.com/the-virtual-brain/tvb-data.git
 
+build:
+  noarch: python
+  number: 0
+  script: python setup.py install
+
 requirements:
   build:
     - python
@@ -14,10 +19,9 @@ requirements:
   run:
     - python
 
-build:
-  noarch: python
-  number: 0
-  script: python setup.py install
+test:
+  imports:
+    - tvb_data
 
 about:
   home: http://www.thevirtualbrain.com/
