--- a/recipes/tvb-framework/meta.yaml
+++ b/recipes/tvb-framework/meta.yaml
@@ -39,6 +39,11 @@ requirements:
   run:
     - python
 
+test:
+  imports:
+    - tvb
+    - tvb.interfaces
+
 about:
   home: http://www.thevirtualbrain.com/
   license: GPL-3.0
@@ -46,13 +51,13 @@ about:
   license_file: LICENSE
   summary: 'A package for performing whole brain simulations'
   description: |
-    The Virtual Brain Project (TVB Project) has the purpose of offering some
-    modern tools to the Neurosciences community, for computing, simulating
-    and analyzing functional and structural data of human brains.
-    The Virtual Brain framework is a complete framework including:
-    -  a plugable workflow manager;
-    -  a data persistence layer (with a relational DB and File Storage);
-    -  an HTML5 based user interface;
+    The Virtual Brain Project (TVB Project) has the purpose of offering some |
+    modern tools to the Neurosciences community, for computing, simulating |
+    and analyzing functional and structural data of human brains. |
+    The Virtual Brain framework is a complete framework including: |
+    -  a plugable workflow manager; |
+    -  a data persistence layer (with a relational DB and File Storage); |
+    -  an HTML5 based user interface; |
     -  visualizers for neuro-science related entities.
   doc_url: http://docs.thevirtualbrain.org/
   dev_url: https://github.com/the-virtual-brain/tvb-framework
