--- a/recipes/tvb-library/meta.yaml
+++ b/recipes/tvb-library/meta.yaml
@@ -29,6 +29,11 @@ requirements:
   run:
     - python
 
+test:
+  imports:
+    - tvb
+    - tvb.simulator
+
 about:
   home: http://www.thevirtualbrain.com/
   license: GPL-3.0
@@ -36,10 +41,10 @@ about:
   license_file: LICENSE
   summary: 'A package for performing whole brain simulations'
   description: |
-    The Virtual Brain Project (TVB Project) has the purpose of offering some
-    modern tools to the Neurosciences community, for computing, simulating
-    and analyzing functional and structural data of human brains.
-    "TVB Scientific Library" is the most important scientific contribution
+    The Virtual Brain Project (TVB Project) has the purpose of offering some |
+    modern tools to the Neurosciences community, for computing, simulating |
+    and analyzing functional and structural data of human brains. |
+    "TVB Scientific Library" is the most important scientific contribution |
     of TVB Project, but only a part of our code.
   doc_url: http://docs.thevirtualbrain.org/
   dev_url: https://github.com/the-virtual-brain/tvb-library
