--- a/recipes/fs.webdavfs/meta.yaml
+++ b/recipes/fs.webdavfs/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "fs.webdavfs" %}
-{% set version = "0.2.1" %}
-{% set sha256 = "02a50cbb8107ebf5f04b44b36fb9413d2cb8eb54f84c1ac1d00e4ac034dd7bdf" %}
+{% set version = "0.3.1" %}
+{% set sha256 = "dd326400ddd188f61f8314209162f9d0fe2753eb1a6c005407b583b92b9ea549" %}
 
 package:
   name: {{ name|lower }}
@@ -32,8 +32,9 @@ test:
 
 about:
   home: https://github.com/PyFilesystem/webdavfs
-  license: BSD
-  license_family: BSD
+  license: MIT
+  license_family: MIT
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'fs.webdavfs is a WebDAV driver for PyFileSystem2.'
   description: |
 
