Add gdist recipe. Fix as suggested in the other recipes.

--- a/recipes/tvb-data/meta.yaml
+++ b/recipes/tvb-data/meta.yaml
@@ -1,16 +1,16 @@
-
 package:
   name: tvb-data
   version: "1.5.4"
 
 source:
-  git_rev: 805f9af4eb05722a52db789307bb81e261ba529a
-  git_url: https://github.com/the-virtual-brain/tvb-data.git
+  md5: 2b0518fc64a630146f93a8819be30b9a
+  fn: 'tvb-data-1.5.4.tar.gz'
+  url: https://pypi.io/packages/source/t/tvb-data/tvb-data-1.5.4.0.tar.gz
 
 build:
-  noarch: python
   number: 0
-  script: python setup.py install
+  script: python setup.py install --single-version-externally-managed --record record.txt
+  skip: True  # [py>27]
 
 requirements:
   build:
@@ -36,4 +36,4 @@ about:
 
 extra:
   recipe-maintainers:
-    - 'liadomide'
+    - liadomide
