--- a/recipes/tvb-framework/meta.yaml
+++ b/recipes/tvb-framework/meta.yaml
@@ -1,22 +1,23 @@
-
 package:
   name: tvb-framework
   version: "1.5.4"
 
 source:
-  git_rev: 1aaf90c67450dfe535a7f76002f203218de330b4
-  git_url: https://github.com/the-virtual-brain/tvb-framework.git
+  md5: 393ab17c9a73188f88c95d4ba4b5cc3e
+  fn: 'tvb-framework-1.5.4.tar.gz'
+  url: https://pypi.io/packages/source/t/tvb-framework/tvb-framework-1.5.4.1.tar.gz
 
 build:
-  noarch: python
   number: 0
-  script: python setup.py install
+  script: python setup.py install --single-version-externally-managed --record record.txt
   skip: True  # [py>27]
 
 requirements:
   build:
     - python
     - setuptools
+  run:
+    - python
     - allensdk
     - apscheduler
     - BeautifulSoup4
@@ -36,13 +37,10 @@ requirements:
     - sqlalchemy-migrate  0.7.2
     - tvb-data
     - tvb-library
-  run:
-    - python
 
 test:
   imports:
-    - tvb
-    - tvb.interfaces
+    - tvb.interfaces.web.run
 
 about:
   home: http://www.thevirtualbrain.com/
@@ -64,4 +62,4 @@ about:
 
 extra:
   recipe-maintainers:
-    - 'liadomide'
+    - liadomide
