--- a/recipes/tvb-library/meta.yaml
+++ b/recipes/tvb-library/meta.yaml
@@ -1,22 +1,23 @@
-
 package:
   name: tvb-library
   version: "1.5.4"
 
 source:
-  git_rev: 6eda15663070fb407696e388b2e287e8d290eb07
-  git_url: https://github.com/the-virtual-brain/tvb-library.git
+  md5: a59efa09a559f3eaf4fbc579919f566c
+  fn: 'tvb-library-1.5.4.tar.gz'
+  url: https://pypi.io/packages/source/t/tvb-library/tvb-library-1.5.4.0.tar.gz
 
 build:
-  noarch: python
   number: 0
-  script: python setup.py install
+  script: python setup.py install --single-version-externally-managed --record record.txt
   skip: True  # [py>27]
 
 requirements:
   build:
     - python
     - setuptools
+  run:
+    - python
     - gdist
     - networkx
     - nibabel
@@ -26,13 +27,10 @@ requirements:
     - matplotlib
     - scikit-learn
     - scipy
-  run:
-    - python
 
 test:
   imports:
-    - tvb
-    - tvb.simulator
+    - tvb.simulator.lab
 
 about:
   home: http://www.thevirtualbrain.com/
@@ -51,4 +49,4 @@ about:
 
 extra:
   recipe-maintainers:
-    - 'liadomide'
+    - liadomide
