--- a/recipes/c3/meta.yaml
+++ b/recipes/c3/meta.yaml
@@ -7,12 +7,12 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/c3js/c3/archive/v0.4.18.tar.gz
+  url: https://github.com/c3js/{{ name }}/archive/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
   number: 0
-  noarch: True
+  noarch: generic
   script: npm install -g .
 
 requirements:
@@ -23,7 +23,7 @@ requirements:
     
 test:
   imports:
-   
+    
 
 about:
   home: https://github.com/c3js/c3
