fixed URLs to use templated version number

--- a/recipes/pyld/meta.yaml
+++ b/recipes/pyld/meta.yaml
@@ -8,7 +8,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.python.org/packages/da/c7/1a87baf08fca47cb17657ba2057c7f10eadaff38e39cf0210f1bd012d623/{{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
@@ -30,7 +30,7 @@ test:
     - pyld
     
 about:
-  home: https://pypi.python.org/pypi/PyLD/0.7.3
+  home: https://pypi.python.org/pypi/PyLD/{{ version }}
   license: BSD
   summary: 'Python implementation of the JSON-LD API'
   license_family: BSD
