--- a/recipes/gdist/meta.yaml
+++ b/recipes/gdist/meta.yaml
@@ -9,7 +9,7 @@ source:
 
 build:
   number: 0
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  script: python setup.py install
   skip: True  # [py>27]
 
 requirements:
