[statmorph] Fixed according to comments.

--- a/recipes/statmorph/meta.yaml
+++ b/recipes/statmorph/meta.yaml
@@ -1,4 +1,3 @@
-
 {% set name = "statmorph" %}
 {% set version = "0.1.0" %}
 {% set sha256 = "5e92600867b3ddbd3bd1194ca8689c5e99e214d909588e29860c05be5f14712e" %}
@@ -19,10 +18,10 @@ build:
 
 requirements:
   build:
-    - scikit-image >=0.13
-    - astropy >=2.0
-    - photutils >=0.3
+    - python
+    - setuptools
   run:
+    - python
     - scikit-image >=0.13
     - astropy >=2.0
     - photutils >=0.3
@@ -37,7 +36,6 @@ about:
   license_family: BSD
   license_file: LICENSE
   summary: 'Non-parametric morphological diagnostics of galaxy images'
-
   description: |
     Python code for calculating non-parametric morphological diagnostics
     of galaxy images.
