--- a/recipes/flask-jwt-extended/meta.yaml
+++ b/recipes/flask-jwt-extended/meta.yaml
@@ -1,4 +1,4 @@
-{% set name = "flask-jwt-extended" %}
+{% set name = "Flask-JWT-Extended" %}
 {% set version = "3.3.1" %}
 {% set sha256 = "fe25451a67641ac3007ebbde575e35dfbda7f95b95434b65ff10e3d37f2986b7" %}
 
