Fix licence missing

--- a/recipes/flask-jwt-extended/meta.yaml
+++ b/recipes/flask-jwt-extended/meta.yaml
@@ -34,7 +34,8 @@ about:
   home: https://github.com/vimalloc/flask-jwt-extended
   license: MIT
   license_family: MIT
-  license_file: LICENSE
+  # Package is currently without license file. Added an issue https://github.com/vimalloc/flask-jwt-extended/issues/88
+  # to fix this   
   summary: 'A Flask JWT extension'
 
   description: |
