Review from synapticarbors

--- a/recipes/flask-jwt-extended/meta.yaml
+++ b/recipes/flask-jwt-extended/meta.yaml
@@ -22,8 +22,8 @@ requirements:
     - python
     - setuptools
   run:
-    - flask >=0.12.2
-    - pyjwt >=1.5.2
+    - flask
+    - pyjwt
     - python
 
 test:
@@ -34,8 +34,8 @@ about:
   home: https://github.com/vimalloc/flask-jwt-extended
   license: MIT
   license_family: MIT
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   # Package is currently without license file. Added an issue https://github.com/vimalloc/flask-jwt-extended/issues/88
-  # to fix this   
   summary: 'A Flask JWT extension'
 
   description: |
