Fix test import

--- a/recipes/flask-jwt-extended/meta.yaml
+++ b/recipes/flask-jwt-extended/meta.yaml
@@ -28,7 +28,7 @@ requirements:
 
 test:
   imports:
-    - flask-jwt-extended
+    - flask_jwt_extended
 
 about:
   home: https://github.com/vimalloc/flask-jwt-extended
