--- a/recipes/fs.sshfs/meta.yaml
+++ b/recipes/fs.sshfs/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - fs
     - six
     - paramiko
-    - configparser  # [py27 and py34]
+    - configparser  # [py<35]
 
 test:
   imports:
