changed the license filename

--- a/recipes/datatables/meta.yaml
+++ b/recipes/datatables/meta.yaml
@@ -29,7 +29,7 @@ about:
   home: https://github.com/DataTables/DataTables
   license: MIT
   license_family: MIT
-  license_file: LICENSE
+  license_file: license.txt
   summary: 'Tables plug-in for jQuery'
   description: |
     DataTables is a table enhancing plug-in for the jQuery Javascript library, 
