--- a/recipes/flot/meta.yaml
+++ b/recipes/flot/meta.yaml
@@ -30,7 +30,7 @@ about:
   home: https://github.com/flot/flot
   license: MIT
   license_family: MIT
-  license_file: LICENSE
+  license_file: LICENSE.txt
   summary: 'Attractive JavaScript charts for jQuery'
   description: |
     Flot is a Javascript plotting library for jQuery.  
