--- a/recipes/flot/meta.yaml
+++ b/recipes/flot/meta.yaml
@@ -7,12 +7,12 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/flot/flot/archive/v0.8.3.tar.gz
+  url: https://github.com/flot/{{ name }}}/archive/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
   number: 0
-  noarch: True
+  noarch: generic
   script: npm install -g .
 
 requirements:
