added a test command

--- a/recipes/d3/meta.yaml
+++ b/recipes/d3/meta.yaml
@@ -12,7 +12,7 @@ source:
 
 build:
   number: 0
-  noarch: True
+  noarch: generic
   script: npm install -g .
 
 requirements:
@@ -22,7 +22,8 @@ requirements:
     - nodejs
     
 test:
-  imports:
+  commands:
+    - npm list -g d3
    
 
 about:
