--- a/recipes/d3/meta.yaml
+++ b/recipes/d3/meta.yaml
@@ -7,7 +7,7 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/d3/d3/archive/v4.10.2.tar.gz
+  url: https://github.com/d3/{{ name }}/archive/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
@@ -19,7 +19,6 @@ requirements:
   build:
     - nodejs
   run:
-    - nodejs
     
 test:
   commands:
