--- a/recipes/datatables/meta.yaml
+++ b/recipes/datatables/meta.yaml
@@ -12,14 +12,13 @@ source:
 
 build:
   number: 0
-  noarch: True
+  noarch: generic
   script: npm install -g .
 
 requirements:
   build:
     - nodejs
   run:
-    - nodejs
     
 test:
   commands:
