--- a/recipes/datatables/meta.yaml
+++ b/recipes/datatables/meta.yaml
@@ -7,7 +7,7 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/DataTables/DataTables/archive/1.10.16.tar.gz
+  url: https://github.com/DataTables/{{ name }}/archive/{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
