Address review comments

--- a/recipes/altgraph/meta.yaml
+++ b/recipes/altgraph/meta.yaml
@@ -32,16 +32,12 @@ about:
   home: https://bitbucket.org/ronaldoussoren/altgraph
   license: MIT
   license_family: MIT
-  # the licence file is missing in this package
-  # license_file: LICENSE.txt
+  license_file: doc/license.rst
   summary: 'altgraph is a fork of graphlib'
-
-  # The remaining entries in this section are optional, but recommended
   description: |
       altgraph is a fork of graphlib: a graph (network)
       package for constructing graphs, BFS and DFS traversals,
       topological sort, shortest paths, etc. with graphviz output.
-
   doc_url: https://altgraph.readthedocs.io/en/latest/
   dev_url: https://bitbucket.org/ronaldoussoren/altgraph
 
