--- a/recipes/material-design-lite/meta.yaml
+++ b/recipes/material-design-lite/meta.yaml
@@ -7,7 +7,7 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/google/material-design-lite/archive/v1.3.0.tar.gz
+  url: https://github.com/google/{{ name }}/archive/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
@@ -20,8 +20,8 @@ requirements:
     - python
     
 test:
-  imports:
-   
+  commands:
+    - material-design-lite
 
 about:
   home: https://github.com/google/material-design-lite
