--- a/recipes/material-design-lite/meta.yaml
+++ b/recipes/material-design-lite/meta.yaml
@@ -21,7 +21,7 @@ requirements:
     
 test:
   commands:
-    - material-design-lite
+    - npm list -g material-design-lite
 
 about:
   home: https://github.com/google/material-design-lite
