--- a/recipes/jquery/meta.yaml
+++ b/recipes/jquery/meta.yaml
@@ -12,17 +12,17 @@ source:
 
 build:
   number: 0
-  noarch: True
+  noarch: generic
   script: npm install -g .
 
 requirements:
   build:
     - nodejs
   run:
-    
+    - nodejs
 test:
-  imports:
-    
+  commands:
+    - npm list -g jquery
    
 
 about:
