Add license file for xenon

--- a/recipes/xenon/meta.yaml
+++ b/recipes/xenon/meta.yaml
@@ -35,7 +35,7 @@ about:
   home: https://github.com/rubik/xenon
   license: MIT
   license_family: MIT
-  license_file: LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'Monitor code metrics for Python on your CI server'
 
   description: |
