lint: add about.home

--- a/recipes/python.app/meta.yaml
+++ b/recipes/python.app/meta.yaml
@@ -19,6 +19,7 @@ test:
     - pythonw -V
 
 about:
+  home: https://www.python.org/
   license: BSD
   summary: Proxy on OS X letting Python libraries hook into the gui event loop
 
